Fix Newsletter section on tablet version

--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -231,6 +231,12 @@ p{
         font-size: 28px !important;
     }
 
+    newsletter {
+        background-image: url('/assets/img/starting5-homepage.png');
+        background-repeat: no-repeat;
+        height: 230px !important;
+    }
+
 
 }
 
